add: 프로젝트 추가

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 # VP of Global Communications
 - company: (주)블록오디세이
-  position: 금융프로덕트팀 • 개발
+  position: 금융프로덕트 • 개발팀
   duration: 2021.02 - 2024.09 (3년 8개월)
   summary:
     - 디앱(DApp) 및 금융 기관을 위한 맞춤형 인프라 구축과 솔루션 개발을 진행
