add: 이력서 프로젝트 및 스킬셋 추가

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: '이력서 - 김병준(Byeong Jun, Kim)'
+title: '김병준 - 프론트엔드 엔지니어'
 description: '프론트엔드 개발자 김병준의 이력서입니다.'
 
 # Build settings
