--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,20 @@
 # Skills
-# Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Communication
+  items:
+    - 비개발자와도 기술적 요구사항을 쉽게 설명하고, 피드백을 수용하여 문제를 해결하는 능력을 갖추고 있습니다.
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+- skill: Frontend
+  items:
+    - React로 인터랙티브한 웹 애플리케이션을 개발해본 경험이 많습니다.
+    - Next.js의 Page Router 및 App Router 두 환경 모두 능숙합니다.
+    - CSR, SSR, SSG 방식을 활용해 프로젝트 요구 사항에 맞춘 최적화된 렌더링 방식을 적용할 수 있습니다.
+    - React Native를 통해 모바일 앱 출시 및 업데이트 경험이 있습니다.
+    - 다양한 브라우저에서 트러블 슈팅을 통해 호환성 문제를 해결한 경험이 많습니다.
+    - Sass, Styled-components, Tailwind 등으로 사용자 맞춤형 UI를 구현할 수 있습니다.
+    - 웹 접근성 및 SEO 최적화 작업 경험이 있습니다.
 
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+- skill: Backend
+  items:
+    - Node.js를 사용해 RESTful API 설계 및 서버 구축해본 경험이 있습니다.
+    - Prisma ORM을 사용해 데이터베이스 관리를 해본 경험이 있습니다.
+    - Next.js API Routes를 사용해 클라이언트와 서버 간 원활한 통신을 구현한 경험이 있습니다.
