--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address: '742 Evergreen Terrace, Springfield'
 resume_header_contact_info: '742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com'
 display_header_contact_info: 'false'
 
-resume_header_intro: '<p><b>새로운 기술과 개념을 빠르게 습득하고 효율적으로 정리하는 데</b> 강점을 가진 3년차 프론트엔드 개발자입니다.<br/>첫 직장인 스타트업에서 <b>블록체인 및 Web 3.0</b> 분야에서 활동했고, 복잡한 시스템의 이해와 최적화에 주력했습니다.
+resume_header_intro: '<p><b>새로운 기술을 빠르게 습득하고 효율적으로 정리하는 데</b> 강점을 가진 3년차 프론트엔드 개발자입니다.<br/>첫 직장인 스타트업에서 <b>블록체인 및 Web 3.0</b> 분야에서 활동했고, 복잡한 시스템의 이해와 최적화에 주력했습니다.
 처음에는 생소했던 이 분야에서 <b>Next.js, TypeScript, React</b>를 활용해 다양한 프로젝트를 수행했고, 문서화와 지식 공유를 통해 팀의 성장을 이끌었습니다.<br/>저는 <b>복잡한 개념과 기술을 정리</b>하고 이를 문서화하여 팀 내에서 쉽게 공유하고 협업하는 문화를 조성해왔습니다.</p>'
 
 # use "yes" to display the email contact button,
