--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -49,7 +49,7 @@
         - main: Web 3.0 앱 접근성 향상을 위한 <b>Web3Auth</b> 전담 개발
           subitems:
             - 기존 UI/UX가 기획 의도와 상이하여, Core만 활용해 SDK를 커스터마이징하여 최적화된 사용자 경험 제공
-        - main: eact-hook-form의 useFieldArray와 연동하여 Excel 초대장 리스트 데이터의 효율적인 관리 구현
+        - main: react-hook-form의 useFieldArray와 연동하여 Excel 초대장 리스트 데이터의 효율적인 관리 구현
         - main: <b>Jira</b>를 활용한 QA팀과의 협업으로 다양한 서버 환경(Production, Stage, Develop)에서 프로젝트 관리
       skills:
         - next.js
