--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,6 +5,7 @@
   url: "https://dolmenge.vercel.app/dolmenge_jeonpo/pass"
   links:
     - <a href="https://github.com/b0jun/dolparty" target="_blank" rel="noopener noreferrer">Github(Readme)</a>
+    - <a href="https://spicycookie.me/Essay/dolparty" target="_blank" rel="noopener noreferrer">회고</a>
   items:
     - main: 서비스 기능 요약
       subitems:
