--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -6,15 +6,15 @@
 - skill: Frontend
   items:
     - React로 인터랙티브한 웹 애플리케이션을 개발해본 경험이 많습니다.
-    - Next.js의 Page Router 및 App Router 두 환경 모두 능숙합니다.
-    - CSR, SSR, SSG 방식을 활용해 프로젝트 요구 사항에 맞춘 최적화된 렌더링 방식을 적용할 수 있습니다.
-    - React Native를 통해 모바일 앱 출시 및 업데이트 경험이 있습니다.
+    - Next.js의 Page Router와 App Router 환경에 모두 능숙합니다.
+    - CSR, SSR, SSG 방식을 활용해 프로젝트 요구 사항에 최적화된 렌더링 방식을 적용할 수 있습니다.
+    - React Native를 활용하여 모바일 앱을 출시하고 업데이트할 수 있습니다.
     - 다양한 브라우저에서 트러블 슈팅을 통해 호환성 문제를 해결한 경험이 많습니다.
     - Sass, Styled-components, Tailwind 등으로 사용자 맞춤형 UI를 구현할 수 있습니다.
     - 웹 접근성 및 SEO 최적화 작업 경험이 있습니다.
 
 - skill: Backend
   items:
-    - Node.js를 사용해 RESTful API 설계 및 서버 구축해본 경험이 있습니다.
+    - Node.js를 사용한 RESTful API 및 GraphQL API 설계와 서버 구축 경험이 있습니다.
     - Prisma ORM을 사용해 데이터베이스 관리를 해본 경험이 있습니다.
     - Next.js API Routes를 사용해 클라이언트와 서버 간 원활한 통신을 구현한 경험이 있습니다.
