mod: 스킬셋 추가

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -2,6 +2,7 @@
 - skill: Communication
   items:
     - 비개발자와도 기술적 요구사항을 쉽게 설명하고, 피드백을 수용하여 문제를 해결하는 능력을 갖추고 있습니다.
+    - 코드 리뷰 및 피드백 세션을 통해 팀의 코드 품질을 높이는 것을 지향합니다.
 
 - skill: Frontend
   items:
