--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,11 +2,11 @@
 # VP of Global Communications
 - company: (주)블록오디세이
   position: 금융프로덕트 • 개발팀
-  duration: 2021.02 - 2024.09 (3년 8개월)
+  duration: 2021.02 - 2024.10 (3년 9개월)
   summary:
-    - 디앱(DApp) 및 금융 기관을 위한 맞춤형 인프라 구축과 솔루션 개발
-    - 10명 규모의 팀에서 프론트엔드 담당으로 NFT 마켓플레이스, Web 3.0 티켓팅 서비스, 금융 솔루션 등을 Jira를 활용해 개발
-    - 개발 문화 향상을 위해 다양한 내부 포럼을 진행했으며, 코드 리뷰 세션과 코드 컨벤션 수립, 모범 사례 공유, 새로운 기술 도입 방안을 논의하여 팀의 개발 역량을 강화
+    - 금융 기관을 위한 <b>Web3.0 맞춤형 인프라 구축과 솔루션</b>을 개발했습니다.
+    - 10명 규모의 팀에서 <b>블록체인 지갑 연동과 결제 로직</b>을 구현을 주로 담당한 프론트엔드 개발업무로 근무하였습니다.
+    - <b>월간 프론트엔드 포럼</b>을 주도해서 진행해 Typescript, React Query, Next.js(App Router) 등을 도입해 문화 향상시켰습니다.
   projects:
     - title: Pro.log
       duration: 2024.07. - 2024.08. (1개월)
@@ -68,9 +68,9 @@
             - metamask-react 라이브러리 소스를 커스터마이징하여 기획에 맞는 유연한 회원가입 흐름 구성
             - Metamask를 통한 Matic 결제 적용
             - 초기 아임포트를 통한 원화결제 구현 후, Metamask와의 충돌 이슈로 <b>토스페이먼츠</b>로 전환하며 결제 흐름 최적화
-        - main: <b>Next.js 정적배포 이슈</b>
+        - main: <b>Next.js 다국어 처리 이슈</b>
           subitems:
-            - 언어별 정적 페이지 사전 생성 및 클라이언트 측 언어 변경 로직 추가로 문제 해결
+            - 서버가 없는 배포환경으로 인해 런타임 다국어 처리가 불가능 → 언어별 정적 페이지를 사전 생성해서 해결
       skills:
         - next.js
         - typescript
