--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 # Projects
-- project: 클라이밍 대회 채점 시스템
+- project: 클라이밍 대회 운영 시스템
   role: 개인 프로젝트
   duration: 2024.08. - 2024.09. (1개월)
   # url: "https://dolmenge.vercel.app/dolmenge_jeonpo/pass"
