--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -11,7 +11,7 @@
     - CSR, SSR, SSG 방식을 활용해 프로젝트 요구 사항에 최적화된 렌더링 방식을 적용할 수 있습니다.
     - React Native를 활용하여 모바일 앱을 출시하고 업데이트할 수 있습니다.
     - 다양한 브라우저에서 트러블 슈팅을 통해 호환성 문제를 해결한 경험이 많습니다.
-    - Sass, Styled-components, Tailwind 등으로 사용자 맞춤형 UI를 구현할 수 있습니다.
+    - Sass, Styled-components, Emotion, Tailwind 등으로 사용자 맞춤형 UI를 구현할 수 있습니다.
     - 웹 접근성 및 SEO 최적화 작업 경험이 있습니다.
 
 - skill: Backend
